k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agentlog
  labels:
    name: agentlog
